--- a/index.html
+++ b/index.html
@@ -5,5 +5,83 @@
 	</head>
 	<body>
 		<h1>Na mehet</h1>
+		<h2>Kisebb</h2>
+		<h3>Kisebb</h3>
+		<h4>Kisebb</h4>
+		<h5>Kisebb</h5>
+		
+		<p>qweqweqweqwe qweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqwe qweqweqweqweqweqweqweqweqweqweqweqwe</p>
+		<a href="seged1.html">Masik oldal</a>
+		<p>qweqweqweqwe qweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqweqwe qweqweqweqweqweqweqweqweqweqweqweqwe</p>
+ 
+		<!--Kommentecske
+				HALO HALO-->
+
+		<!--Itt kezdodik a lista/nem sorrendezett-->
+		<ul>
+			<li>Elso elem</li>
+			<li><a href="https://www.google.com">google</a></li>
+			<li>Menu3</li>
+			<li>Menu4</li>
+		</ul>
+		
+		<!-- Sorrendezett lista itt kezodik -->
+		<ol>
+			<li>Na mehet</li>
+			<li>Mehetne</li>
+			<li>Menjen</li>
+		</ol>
+
+		<!--Tablazat kezdete-->
+		<table>
+			<thead>
+				<tr>
+					<th>Nev</th>
+					<th>Email</th>
+					<th>Vercsoport</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>QWE</td>
+					<td>qwe@anyad.hu</td>
+					<td>A+</td>
+				</tr>
+				<tr>
+					<td>ASD</td>
+					<td>asd@anyad.hu</td>
+					<td>0</td>
+				</tr>
+				<tr>
+					<td>ZXC</td>
+					<td>zxc@anyad.hu</td>
+					<td>AB-</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<!--Div itt kezodik-->
+		<div style="background-color:black; color:yellow;">Divbe van ez a resz</div>
+
+		<!-- Form itt kezodik-->
+		<form action = "#">
+			<div>
+				<label>Keresztnev</label>
+				<input type = "text" name = "knev" >
+			</div>
+			<div>
+				<label>Jelszo</label>
+				<input type = "password" name = "jelszo" >
+			</div>
+			<input type = "submit" value="Kuldes">
+		</form>
+		<br/>
+		<button>Gombocska</button>
+		<br/><hr/>
+		
+		<!-- Linkelt kep-->
+		<a href = "image.html">
+			<img src = "images/denver_broncos.jpg" alt = "denver" width="150" height = "150"/>
+		</a>
 	</body>
 </html>
