--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,24 @@
 <html>
     <head>
         <title>Hanlo Blog KEKW</title>
+        <meta name = "descriptson" content="Blog">
+        <meta charset="UTF8"/>
+        <!--<meta http-equiv="refresh" content = "0"/> -->
+        <style type = "text/css">
+            #cimsor1{
+                text-align: center;
+                background-color: purple;
+                color: yellowgreen;
+                padding: 10px;
+            }
+            #lablec1{
+                text-align: center;
+                padding: 10px;
+            }
+        </style>
     </head>
     <body>
-        <header>
+        <header id = "cimsor1">
             <h1>Inas blog</h1>
         </header>
         <section>
@@ -47,7 +62,7 @@
         </aside>
 
         <!--Labjegyzet-->
-        <footer>
+        <footer id = "lablec1">
             <h4> Edd ki es szidd ki a tovem</h4>
         </footer>
     </body>
